--- a/www/pages/commons/header.html
+++ b/www/pages/commons/header.html
@@ -75,7 +75,7 @@
 	<link rel="icon" type="image/png" sizes="512x512" href="{{ config.site.fullurl }}/img/icons/android/icon-512x512.png">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo+Bhai">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap">
 	<link rel="stylesheet" type="text/css" href="{{ config.site.fullurl }}/css/full.min.css" />
 	<link rel="stylesheet" type="text/css" href="{{ config.site.fullurl }}/css/skin-default.min.css" title="default" {% if 'nightmode' in cookie.style %}disabled{% endif %} />
 	<link rel="stylesheet" type="text/css" href="{{ config.site.fullurl }}/css/skin-nightmode.min.css" title="nightmode" {% if 'default' in cookie.style %}disabled{% endif %} />
