--- a/themes/default/pages/contents/cookie_it.html
+++ b/themes/default/pages/contents/cookie_it.html
@@ -1,5 +1,5 @@
 		<section class="section">
 			<div class="content has-text-centered">
-				{{ translate.hello_world }}
+				{{ translate.cookie_policy }}
 			</div>
 		</section>
