--- a/themes/default/pages/index.html
+++ b/themes/default/pages/index.html
@@ -13,11 +13,13 @@
 	<div class="container">
 		<section class="section">
 			<div class="content has-text-centered">
+				<header>
 				<picture class="ptkdev">
                     <source srcset="/img/logo.webp" type="image/webp">
                     <source srcset="/img/logo.png" type="image/png">
                     <img width="150" height="150" src="/img/lazy.png" data-src="/img/logo.png"  alt="Patryk Rzucidło (PTKDev)" class="lazy">
                 </picture><br />
+            	</header>
 				{{ translate.hello_world }}
 			</div>
 		</section>
