--- a/themes/default/pages/policy/cookie/index.html
+++ b/themes/default/pages/policy/cookie/index.html
@@ -11,14 +11,16 @@
 <body id="yourprojectname" itemscope itemtype="http://schema.org/WebPage">
 	{% include "pages/commons/menu.html" %}
 	<div class="container">
-		<section class="section">
-			<div class="content has-text-centered">
-				{{ translate.cookie_policy }}
-			</div>
-		</section>
+		{% if config.system.language == 'it' %}
+			{% include "pages/contents/cookie_it.html" %}
+		{% endif %}
+
+		{% if config.system.language == 'en' %}
+			{% include "pages/contents/cookie_en.html" %}
+		{% endif %}
 	</div>
 	{% include "pages/commons/footer.html" %}
-	<script async src="{{ config.site.fullurl }}/js/full.min.js"></script>
+	<script defer src="{{ config.site.fullurl }}/js/full.min.js"></script>
 	{% include "pages/commons/services.html" %}
 
 </body>
